Added Eureka server and feign client
